# week3_robot

arm_move/: CMakeLists.txt  package.xml
arm_move/include/arm_move/: arm_move.hpp
arm_move/launch/: arm_move.launch
arm_move/src/: arm_move.cpp  arm_move_main_1.cpp
rikuken_robot/: CMakeLists.txt  package.xml
rikuken_robot/launch/: robot_gazebo.launch
rikuken_robot/models/box1/: model.sdf
rikuken_robot/models/box1/materials/: texture.material
rikuken_robot/src/: model_tf_publisher.cpp  model_tf_publisher_node.cpp
rikuken_robot/urdf/: hande_camera.urdf.xacro  ur3e.urdf.xacro  ur3e_hand_E_camera.urdf.xacro  ur3e_joint_limited_robot.urdf.xacro
rikuken_robot/world/: box.world
ur3_hand_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ur3_hand_moveit/config/: fake_controllers.yaml  ros_controllers.yaml  ur3e_gripper.srdf
ur3_hand_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur3e_gripper_moveit_controller_manager.launch.xml  warehouse.launch
